# ogl

./: .gitmodules  CMakeLists.txt  readme.txt
engine/: ColoredTextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader
engine/assets/: ColoredTransformVertexShader.vertexshader  TextureFragmentShader.fragmentshader  test.fnt
engine/src/: game.cpp  main.cpp
engine/src/core/: actor_state.h  batch_collector.cpp  batch_collector.h  game_var.h  quad.h  render_state.h  signal.h  vertex.cpp  vertex.h
engine/src/scene/: actor.cpp  actor.h  button.cpp  button.h  material.cpp  material.h  mouse_area.cpp  mouse_area.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h  tweens.cpp  tweens.h
engine/src/system/: debug_render.cpp  debug_render.h  input_system.cpp  input_system.h  paths.cpp  paths.h  signal_system.cpp  signal_system.h  texture_remover.cpp  texture_remover.h
engine/src/system/actors/: debug_render_actor.cpp  debug_render_actor.h  mouse_area.cpp  mouse_area.h
engine/unised/: threaded_variable.h
